# 1bitsy-freertos

./: .gitmodules  README.md  gcc-arm-cortex-m4.txt  meson.build
src/: main.c  stm32f4.ld
src/include/: FreeRTOSConfig.h
